[package]
name = "win_ads"
version = "0.1.1"
edition = "2024"
authors = ["TritiumQin@tritium404@hotmail.com"]
description = "A simple Rust wrapper for the Windows API to manipulate Alternate Data Streams (ADS)."
license = "MIT"
readme = "README.md"
repository = "https://github.com/OpenTritium/win_ads.git"
keywords = ["windows", "winapi", "ads", "ntfs", "filesystem"]
categories = ["os::windows-apis", "filesystem"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg","windows"]
all-features = true

[dependencies]
windows = {version="0.61.3", features=["Win32_Security","Win32_Storage_FileSystem","Win32_System_IO"]}
windows-strings = "0.4.2"

[dev-dependencies]
tempfile = "3.20.0"
